# ProjectMnemosyne

./: .gitleaks.toml  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json
reports/: myrmidon-merge-triage-2026-05-04.md
scripts/: generate_marketplace.py  migrate_ecosystem_skills.py  validate_plugins.py
skills/: academic-paper-accuracy-and-citation-audit.history  academic-paper-accuracy-and-citation-audit.md  academic-paper-writing-and-publication-workflow.history  academic-paper-writing-and-publication-workflow.md  actions-cache-restore-save-split-on-success.history  actions-cache-restore-save-split-on-success.md  address-review-preexisting-unrelated-precommit-failure.md  adr-authoring-indexing-and-maintenance.history  adr-authoring-indexing-and-maintenance.md  agent-config-and-tier-architecture.history  agent-config-and-tier-architecture.md  already-done-issue-detection.history  already-done-issue-detection.md  architecture-agent-timeout-constant-planning-review-risks.md  architecture-agents-md-contract-from-codebase.md  architecture-dip-constructor-injection-planning-risks.md  architecture-executable-convention-guard-pattern.history  architecture-executable-convention-guard-pattern.md  architecture-github-labels-as-state-vocabulary.md  architecture-god-function-decomposition-planning-risks.history  architecture-god-function-decomposition-planning-risks.md  argparse-tristate-optional-flag.md  audit-composition-root-wiring-check.md  audit-remediation-verify-evidence-before-planning.history  audit-remediation-verify-evidence-before-planning.md  (+384 more)
(+5 files in other folders)
